chore: update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-django
-pillow
-django-environ
-psycopg2-binary
-djangorestframework
-django-storages
-boto3
-celery
-rabbitmq
-django-celery-beat
+django==4.2.7
+pillow==10.1.0
+django-environ==0.11.2
+psycopg2-binary==2.9.9
+djangorestframework==3.14.0
+django-storages==1.14.2
+boto3==1.28.78
+celery==5.3.4
+rabbitmq==5.1.1
+django-celery-beat==2.5.0
+redis==5.0.1
+hiredis==2.2.3
+django-ckeditor==6.7.0
+kavenegar==1.1.2
